<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="graduation.project.dongyang.el.ibda.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/box_id"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <EditText
            android:id="@+id/inputId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white_30"
            android:drawableStart="@drawable/ic_baseline_person_24_white"
            android:drawablePadding="20dp"
            android:hint="@string/id"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/inputPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white_30"
            android:drawableStart="@drawable/ic_baseline_info_24_white"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/loginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="로그인 실패! \n 아이디 혹은 비밀번호를 확인해주세요."
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:minHeight="20dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/blue_200"
            android:minHeight="48dp"
            android:text="@string/Login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/box_qr"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingBottom="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/ic_baseline_qr_code_24"
            tools:ignore="Suspicious0dp"
            android:contentDescription="@string/Notice_QR_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/Notice_QR_login"/>

    </LinearLayout>
</LinearLayout>