<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="graduation.project.dongyang.el.ibda.ClothDetail">

    <!-- 툴바 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_200"
        android:minHeight="50dp"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <!-- 기본 정보 레이아웃 박스 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/material_dynamic_neutral95">

            <EditText
                android:id="@+id/cloth_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cloth_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/cloth_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cloth_price"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloth_name" />

            <EditText
                android:id="@+id/cloth_cate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cloth_cate"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloth_price" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="58dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_star"
                app:layout_constraintBottom_toBottomOf="@+id/cloth_cate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloth_price" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/cloth_image_slider"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="의류 상세 정보가 출력될 곳입니다."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="이 부분은 추후에 매장 내 위치로 수정될 예정입니다"
            android:textSize="30dp"/>



    </LinearLayout>

    </ScrollView>


</LinearLayout>

