<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="graduation.project.dongyang.el.ibda.DetailClothes">

    <!-- 툴바 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_200"
        android:minHeight="50dp"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- 기본 정보 레이아웃 박스 -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/material_dynamic_neutral95">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cloth_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_cloth_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cloth_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_cloth_price"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cloth_cate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_cloth_cate"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="58dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/unselected_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.843" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 뷰 페이저 임시 변환
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/cloth_image_slider"
            android:layout_width="match_parent"
            android:layout_height="400dp" />
            -->

        <ImageView
            android:id="@+id/cloth_image_slider"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="의류 상세 정보가 출력될 곳입니다."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="이 부분은 추후에 매장 내 위치로 수정될 예정입니다"
            android:textSize="30dp"/>



    </LinearLayout>

    </ScrollView>


</LinearLayout>

